k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: r3e-api
  namespace: r3e-faas
spec:
  selector:
    app: r3e-api
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: r3e-api-public
  namespace: r3e-faas
spec:
  selector:
    app: r3e-api
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: LoadBalancer
